--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id("org.jetbrains.kotlin.jvm") version "1.4.10"
-    id("org.jetbrains.kotlin.kapt") version "1.4.10"
-    id("org.jetbrains.kotlin.plugin.allopen") version "1.4.10"
+    id("org.jetbrains.kotlin.jvm") version "1.4.31"
+    id("org.jetbrains.kotlin.kapt") version "1.4.31"
+    id("org.jetbrains.kotlin.plugin.allopen") version "1.4.31"
     id("com.github.johnrengelman.shadow") version "6.1.0"
     id("io.micronaut.application") version "1.4.2"
 }
@@ -44,7 +44,7 @@ dependencies {
 
 
 application {
-    mainClass.set("dev.mk2481.ApplicationKt")
+    mainClass.set("dev.mk2481.kadai20200329.ApplicationKt")
 }
 java {
     sourceCompatibility = JavaVersion.toVersion("11")
