--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 DATABASE_NAME=kadai_20200329
 DATABASE_USER=kadai
 DATABASE_PASSWORD=kadai
-DATABASE_URL=jdbc:postgresql://localhost:54321/kadai_20200329
+JDBC_DATABASE_URL=jdbc:postgresql://localhost:54321/kadai_20200329
