--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -3,7 +3,7 @@ micronaut:
     name: kadai20200329
 datasources:
   default:
-    url: ${DATABASE_URL}
+    url: ${JDBC_DATABASE_URL}
     driverClassName: org.postgresql.Driver
     username: ${DATABASE_USER}
     password: ${DATABASE_PASSWORD}
