fix flyway location

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -88,7 +88,7 @@ flyway {
     user = System.getenv("DATABASE_USER")
     password = System.getenv("DATABASE_PASSWORD")
     schemas = ["public"]
-    locations = ["classpath:db/migration"]
+    locations = ["filesystem:src/main/resources/db/migration"]
 }
 
 jooq {
